ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pod1
            backend:
              serviceName: pod-1-service
              servicePort: 80
          - path: /pod2
            backend:
              serviceName: pod-2-service 
              servicePort: 80
